--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,14 @@
             <version>5.12.2</version>
             <scope>test</scope>
         </dependency>
+
+        <!-- picocontainer -->
+        <dependency>
+            <groupId>org.picocontainer</groupId>
+            <artifactId>picocontainer</artifactId>
+            <version>2.15.2</version>
+        </dependency>
+
     </dependencies>
 
 </project>
