--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,12 @@
             <artifactId>picocontainer</artifactId>
             <version>2.15.2</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-picocontainer -->
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-picocontainer</artifactId>
+            <version>7.23.0</version>
+        </dependency>
 
         <!-- JSON -->
         <dependency>
