--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <junit-jupiter.version>5.12.2</junit-jupiter.version>
         <lombok.version>1.18.38</lombok.version>
         <jackson.version>2.16.2</jackson.version>
+        <logger.version>2.22.1</logger.version>
     </properties>
 
     <dependencies>
@@ -73,6 +74,23 @@
             <artifactId>jackson-databind</artifactId>
             <version>${jackson.version}</version>
         </dependency>
+        <!-- Log4j2 -->
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>${logger.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>${logger.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-slf4j2-impl</artifactId>
+            <version>${logger.version}</version>
+        </dependency>
+
     </dependencies>
 
 </project>
